# CST_MCP

./: .gitignore  README.en.md  README.md  pyproject.toml
devkit/: README.md
devkit/tools/: generate_tools.py
docs/: MCP待完成任务清单.md  implementation-plan.md  lib_usage_guide.md  matlab_python_alignment.md
examples/: cross_process_example.py  my_unit_cells.py  parameter_sweep_example.py
mcp_server/: __init__.py  __main__.py  adapter.py  config.py  server.py
ready_for_transplanting/ArrayProcess/: arrayModeling.m  buildMNIST_Cutout.m  fastArrayModeling.m
ready_for_transplanting/AssistFunction/: addToHistory.m  check_material_exists.m  ensureParameterExist.m  ensure_cst_string.m  getParameterList.m  initializeCSTproj.m  quitCSTproj.m  settingParameter.m  updateStructure.m
ready_for_transplanting/CodeMataUnitProcess/: crossProcess.m  rebuildLUT_Offline.m  saveSParamToFile.m
ready_for_transplanting/MetaUnitInfo/: codingMatrixTest.m  getMFromD2NN.m  unitParamsTest.m  unit_Cyuanhuan.m  unit_gongzixing.m
ready_for_transplanting/Modeling/: activateWCS.m  activateWCSGlobal_VBAOnly.m  activateWCS_VBAOnly.m  addObj.m  addObj_VBAOnly.m  defineArc.m  defineArcBlock.m  defineArcBlock_VBAOnly.m  defineArc_VBAOnly.m  defineBrick.m  defineBrick_VBAOnly.m  defineCylinder.m  defineCylinder_VBAOnly.m  defineMaterial.m  deleteComponent.m  deleteComponent_VBAOnly.m  deleteObj.m  ensure_component_exist.m  rotateObj.m  rotateObj_VBAOnly.m  substractObj.m  substractObj_VBAOnly.m  (+2 more)
tests/: __init__.py  test_cst_connection.py  test_geometry.py  test_mcp_server.py  test_open_save.py
(+92 files in other folders)
