[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cst-mcp"
version = "1.0.0"
description = "MCP Server for CST Studio Suite electromagnetic simulation automation"
requires-python = ">=3.13"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "mcp[cli]>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/bbl21/cst-mcp"
Source = "https://github.com/bbl21/cst-mcp"

[project.scripts]
cst-mcp = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = [".", "skills/cst-runtime-cli/scripts"]
